# Antler

./: .gitignore  CLAUDE.md  README.md  antler-config.yaml  antler.example.yaml  build.sh  components.json  electron.vite.config.ts  git-worktrees-architecture.md  package.json  run.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/commands/: bug.md  feature.md  review.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
Antler/: AntlerApp.swift  ContentView.swift  Info.plist  Item.swift
Antler.xcodeproj/: project.pbxproj
Antler/Models/: Card.swift  CardStatus.swift  CardTransfer.swift  MockGitHubData.swift  Tag.swift
Antler/Utilities/: BranchNameGenerator.swift  Color+Hex.swift
Antler/Views/: CardEditorView.swift  CardView.swift  ColumnContainerView.swift  ColumnView.swift  FreeformCanvasView.swift  TagBadgeView.swift  TagManagerView.swift
AntlerTests/: AntlerTests.swift
AntlerUITests/: AntlerUITests.swift  AntlerUITestsLaunchTests.swift
backend/: go.mod  main.go
backend/config/: config.go  config_test.go
backend/github/: client.go  client_test.go
backend/handlers/: issues.go  issues_test.go  sessions.go
backend/orchestrator/: claude.go  devcontainer.go  executor.go  orchestrator.go  session.go  tmux.go  worktree.go
e2e/: playwright.config.ts
kanban-app/: package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs
test-results/: .last-run.json
(+133 files in other folders)
