[package]
name = "antler"
version = "1.0.0"
description = "Parallel GitHub work session manager"
authors = ["Antler"]
edition = "2021"

[lib]
name = "antler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
