[package]
name = "antler"
version = "1.0.0"
description = "Parallel GitHub work session manager"
authors = ["Antler"]
edition = "2021"

[lib]
name = "antler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"

# Speed up dev builds
[profile.dev]
opt-level = 0
incremental = true

# Optimize dependencies even in dev (they rarely change, so compile once fast)
[profile.dev.package."*"]
opt-level = 1
